--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "next": "13.0.4",
+    "next-connect": "^1.0.0-next.3",
     "nextjs-cors": "^2.1.2",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
