--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-webcam": "^7.0.1",
     "swr": "^1.3.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.3"
