--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "framer-motion": "^7.6.19",
     "next": "13.0.4",
     "next-connect": "^1.0.0-next.3",
     "nextjs-cors": "^2.1.2",
