--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "framer-motion": "^7.6.19",
+    "html2canvas": "^1.4.1",
     "next": "13.0.4",
     "next-connect": "^1.0.0-next.3",
     "nextjs-cors": "^2.1.2",
