--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "autoprefixer": "^10.4.13",
+    "downloadjs": "^1.4.7",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "framer-motion": "^7.6.19",
+    "html-to-image": "^1.11.2",
     "html2canvas": "^1.4.1",
     "next": "13.0.4",
     "next-connect": "^1.0.0-next.3",
