--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.0",
     "react-webcam": "^7.0.1",
     "swr": "^1.3.0",
     "tailwindcss": "^3.2.4",
